--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_ain_screen"
+            android:id="@+id/nav_main_screen"
             android:icon="@drawable/ic_main_screen"
             android:title="Main Screen" />
         <item
