--- a/app/src/main/res/layout/activity_individual_stats.xml
+++ b/app/src/main/res/layout/activity_individual_stats.xml
@@ -28,21 +28,13 @@
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="76dp"
-                android:layout_marginTop="244dp"
-                android:text="This is the main screen"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_height="16dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="60dp"
+                android:text="This is the individual statistics screen"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/ic_add" />
 
     </FrameLayout>
 
