--- a/app/src/main/res/layout/activity_manage_categories.xml
+++ b/app/src/main/res/layout/activity_manage_categories.xml
@@ -29,11 +29,23 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="76dp"
-                android:layout_marginTop="244dp"
-                android:text="This is the main screen"
+                android:layout_marginEnd="136dp"
+                android:layout_marginTop="60dp"
+                android:text="This is the manage categories screen"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/exmp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="60dp"
+                android:text="Example Category"
+                android:onClick="onClick"
+                android:clickable="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
         </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.FloatingActionButton
