--- a/app/src/main/res/layout/activity_manage_categories.xml
+++ b/app/src/main/res/layout/activity_manage_categories.xml
@@ -30,8 +30,10 @@
                 android:layout_width="368dp"
                 android:layout_height="515dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="60dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
