--- a/app/src/main/res/layout/activity_main_stats.xml
+++ b/app/src/main/res/layout/activity_main_stats.xml
@@ -25,15 +25,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="16dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="60dp"
-                android:text="This is the main statistics screen"
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/pie_chart_main"
+                android:layout_width="match_parent"
+                android:layout_height="446dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="64dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
         </android.support.constraint.ConstraintLayout>
 
     </FrameLayout>
