customize activity add data to category/activity table and create new category table

--- a/app/src/main/res/layout/activity_customize.xml
+++ b/app/src/main/res/layout/activity_customize.xml
@@ -48,7 +48,7 @@
                 android:text="Category" />
 
             <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/actRadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
