--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -25,15 +25,58 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageButton
+                android:id="@+id/playBut"
+                android:layout_width="30dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="72dp"
+                android:layout_weight="1"
+                app:layout_constraintStart_toEndOf="@+id/selectedAct"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_play_arrow_black_24dp" />
+
+            <ImageButton
+                android:id="@+id/pauseBut"
+                android:layout_width="30dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="72dp"
+                android:layout_weight="1"
+                app:layout_constraintStart_toEndOf="@+id/playBut"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_pause_black_24dp" />
+
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="76dp"
-                android:layout_marginTop="244dp"
-                android:text="This is the main screen"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/selectedAct"
+                android:layout_width="118dp"
+                android:layout_height="21dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="72dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:text="Selected Activity"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <Chronometer
+                android:id="@+id/simpleChronometer"
+                android:layout_width="153dp"
+                android:layout_height="27dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="72dp"
+                app:layout_constraintStart_toEndOf="@+id/pauseBut"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="368dp"
+                android:layout_height="380dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pauseBut" />
+
         </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.FloatingActionButton
