--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -27,6 +27,7 @@
 
             <ListView
                 android:id="@+id/historyList"
+                android:clickable="true"
                 android:layout_width="match_parent"
                 android:layout_height="457dp"
                 android:layout_marginStart="8dp"
