--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="dark_turquoise">#0ebbd4</color>
+    <color name="dark_sea_green">#15949e</color>
+    <color name="indian_red">#d1796e</color>
+    <color name="background_material_light">#ffebd8</color>
 </resources>
