--- a/app/src/main/res/layout/content_edit_history.xml
+++ b/app/src/main/res/layout/content_edit_history.xml
@@ -67,13 +67,13 @@
                     android:layout_weight="1"
                     android:text="Name:" />
 
-                <EditText
-                    android:id="@+id/inputTextName"
+                <Spinner
+                    android:id="@+id/activitySpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="text" />
+                    android:layout_weight="3"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown" />
             </LinearLayout>
 
             <LinearLayout
